# wacom-settings

./: .gitignore  README.md  com.github.avargas05.wacom-settings.json  meson.build
build-aux/meson/: postinstall.py
data/: com.github.avargas05.wacom-settings.appdata.xml.in  com.github.avargas05.wacom-settings.desktop.in  com.github.avargas05.wacom-settings.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.h  datatypes.c  datatypes.h  main.c  meson.build  parser.c  parser.h  wacom_settings-window.c  wacom_settings-window.h  wacom_settings-window.ui  wacom_settings.gresource.xml  windowmanager.c  windowmanager.h
